telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestScopeClass.java
class A {
	class F {
		class I {}
	}
	A (){
		F f = new F();
	}
}