telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestDuplicateMethodsFails.java
class A {}
class B {
	private int test(int var){}
	private int test(int var2){}
}